[package]
name = "mountaineer"
# Bumped automatically by CI on a release
version = "0.1.0"
edition = "2021"

[dependencies]
v8 = "0.89.0"
deno_core_icudata = "0.73.0"

lazy_static = "1.4.0"
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
path-absolutize = "3.1.1"
regex = "1.10.3"
md5 = "0.7.0"

petgraph = "0.6.5"
swc_common = "0.37.2"
swc_ecma_parser = "0.149.0"
swc_ecma_visit = "0.104.5"
swc_ecma_ast = "0.118.1"

log = "0.4"
env_logger = "0.11"

src_go = { path = "./src_go" }

# Thread cancellation needs OS bindings
libc = "0.2"
winapi = { version = "0.3", features = ["processthreadsapi"] }


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
tempfile = "3.10.1"

[profile.release]
opt-level = 3
debug = false
lto = true
incremental = false

[package.metadata.maturin]
name = "mountaineer"

[[bench]]
path = "src/benches/source_map_benchmark.rs"
name = "source_map_benchmark"
harness = false

[[bench]]
path = "src/benches/ssr_benchmark.rs"
name = "ssr_benchmark"
harness = false

[[bench]]
path = "src/benches/lexers_benchmark.rs"
name = "lexers_benchmark"
harness = false
