[package]
name = "mountaineer"
# Bumped automatically by CI on a release
version = "0.1.0"
edition = "2021"

[dependencies]
v8 = "129.0.0"
deno_core_icudata = "0.73.0"

lazy_static = "1.5.0"
pyo3 = { version = "0.23.4", features = ["extension-module"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
path-absolutize = "3.1.1"
regex = "1.11.1"
md5 = "0.7.0"

log = "0.4"
env_logger = "0.11"

src_go = { path = "./src_go" }

# Thread cancellation needs OS bindings
libc = "0.2"
winapi = { version = "0.3", features = ["processthreadsapi"] }
tempfile = "3.16.0"


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.release]
opt-level = 3
debug = false
lto = true
incremental = false

[package.metadata.maturin]
name = "mountaineer"

[[bench]]
path = "src/benches/source_map_benchmark.rs"
name = "source_map_benchmark"
harness = false

[[bench]]
path = "src/benches/ssr_benchmark.rs"
name = "ssr_benchmark"
harness = false

[[bench]]
path = "src/benches/lexers_benchmark.rs"
name = "lexers_benchmark"
harness = false

[lints.rust]
# Global allow to fix pymethods's macro expansion, which can't be
# escaped with an inline #[allow]
non_local_definitions = "allow"
