[tool.poetry]
name = "mountaineer"
version = "0.1.0"
description = "Mountaineer is a batteries-included web framework for Python."
authors = ["Pierce Freeman <pierce@freeman.vc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
fastapi = "^0.114.1"
inflection = "^0.5.1"
click = "^8.1.7"
uvicorn = { extras = ["standard"], version = "^0.27.0.post1" }
packaging = "^23.2"
pydantic-settings = "^2.1.0"
sqlmodel = "^0.0.20"
asyncpg = "^0.29.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.26" }

# Pinned until uvicorn is upgraded: https://github.com/encode/uvicorn/issues/1908
websockets = "<14.0"

# TODO: Move to optional dependencies, since release configurations
# will not need these.
watchdog = "^3.0.0"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.4"
ruff = "^0.1.14"
types-setuptools = "^69.0.0.20240125"
maturin = "^1.4.0"
types-tqdm = "^4.66.0.20240106"
pytest-asyncio = "^0.23.4"
pyinstrument = "^4.6.2"
httpx = "^0.27.0"
types-psycopg2 = "^2.9.21.20240218"
pyright = "^1.1.352"
tqdm = "^4.66.2"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"
types-pygments = "^2.18.0.20240506"

[build-system]
requires = ["maturin>=1.3.0"]
build-backend = "maturin"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "ci_webapp.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pyright]
exclude = ["**/ci_webapp"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Disable print statements
select = ["E4", "E7", "E9", "F", "I001", "T201"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
markers = ["integration_tests: run longer-running integration tests"]
# Default pytest runs shouldn't execute the integration tests
addopts = "-m 'not integration_tests'"

[project]
# Maintaned just for local installation / testing purposes with venvironments
# since these can't pick up poetry's data definitions
name = "mountaineer"
dependencies = [
    "pydantic>=2.5.3,<3.0.0",
    "fastapi>=0.114.1,<1.0.0",
    "inflection>=0.5.1,<1.0.0",
    "click>=8.1.7,<9.0.0",
    "uvicorn[standard]>=0.27.0.post1,<1.0.0",
    "packaging>23.2",
    "watchdog>=3.0.0,<4.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "sqlmodel>=0.0.20,<1.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.26,<3.0.0",
    "rich>=13.7.1,<14.0.0",
    "websockets<14.0",
]

# Excluded in sdist packaging
exclude = [
    "fixtures",
    "ci_webapp",
    "create_mountaineer_app",
    "media",
    "docs_website",
    "benchmarking",
]
