[project]
name = "mountaineer"
version = "0.1.0"
description = "Mountaineer is a batteries-included webapp framework for Python."
readme = "README.md"
authors = [
    { name = "Pierce Freeman", email = "pierce@freeman.vc" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.3,<3.0.0",
    "fastapi>=0.114.1,<1.0.0",
    "inflection>=0.5.1,<1.0.0",
    "click>=8.1.7,<9.0.0",
    "uvicorn[standard]>=0.27.0.post1,<1.0.0",
    "packaging>=23.2",
    "pydantic-settings>=2.1.0,<3.0.0",
    # NOTE: Pinned until uvicorn is upgraded: https://github.com/encode/uvicorn/issues/1908
    "websockets<14.0",
    # These are technically optional dependencies, since release configurations will not need these, but we
    # include them by default since we don't want to force regular dev builds to install an extras
    # for basic CLI functionality.
    "rich>=13.7.1,<14.0.0",
    "watchfiles>=1.0.0,<2.0.0",
    "firehot>=0.4.0,<1.0.0",
]
exclude = [
    "fixtures",
    "ci_webapp",
    "create_mountaineer_app",
    "media",
    "docs_website",
    "benchmarking",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
# NOTE: https://github.com/PyO3/maturin/issues/2314
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]

#[tool.maturin]
#module-name = "mountaineer._core"
#python-packages = ["mountaineer"]
#python-source = "src"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "ci_webapp.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pyright]
exclude = ["**/ci_webapp"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Disable print statements
select = ["E4", "E7", "E9", "F", "I001", "T201"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
markers = ["integration_tests: run longer-running integration tests"]
# Default pytest runs shouldn't execute the integration tests
addopts = "-m 'not integration_tests'"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pyinstrument>=5.0.1",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "python-multipart>=0.0.20",
    "ruff>=0.10.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "types-psycopg2>=2.9.21.20250121",
    "types-setuptools>=76.0.0.20250313",
    "types-toml>=0.10.8.20240310",
    "types-tqdm>=4.67.0.20250301",
    "maturin>=1.0,<2.0"
]