[tool.poetry]
name = "create-mountaineer-app"
version = "0.1.0"
description = "Easily get started with a new Mountaineer project."
authors = ["Pierce Freeman <pierce@freeman.vc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
questionary = "^2.0.1"
click = "^8.1.7"
jinja2 = "^3.1.3"
pydantic = "^2.6.1"

[tool.poetry.scripts]
create-mountaineer-app = 'create_mountaineer_app.cli:main'

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.1"
mypy = "^1.8.0"
requests = "^2.31.0"
types-requests = "^2.31.0.20240125"
pytest-asyncio = "^0.23.4"
pytest-xdist = "^3.5.0"
psycopg2 = "^2.9.9"
types-psycopg2 = "^2.9.21.20240218"
pyright = "^1.1.352"
toml = { version = "^0.10.2", python = "<3.11" }
types-toml = { version = "^0.10.8", python = "<3.11" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ".*/templates/.*"

[tool.ruff]
exclude = ["**/templates/**"]

[tool.pyright]
exclude = ["**/templates"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Disable print statements
select = ["E4", "E7", "E9", "F", "I001", "T201"]

[tool.pytest.ini_options]
markers = ["integration_tests: run longer-running integration tests"]
# Default pytest runs shouldn't execute the integration tests
addopts = "-m 'not integration_tests'"
