[project]
name = "create-mountaineer-app"
version = "0.1.0"
description = "Easily get started with a new Mountaineer project."
authors = [{ name = "Pierce Freeman", email = "pierce@freeman.vc" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "click>=8.1.8",
    "jinja2>=3.1.6",
    "pydantic>=2.10.6",
    "questionary>=2.1.0",
    "toml>=0.10.2",
]


[project.scripts]
create-mountaineer-app = 'create_mountaineer_app.cli:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.force-include]
# Workaround or CI sometimes not respecting our .gitignore inclusion rule
# to allow the template .env but disallow other .env files
"create_mountaineer_app/templates/project/.env" = "create_mountaineer_app/templates/project/.env"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "psycopg[binary]>=3.2.6",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-xdist>=3.6.1",
    "requests>=2.32.3",
    "ruff>=0.10.0",
    "toml>=0.10.2",
    "types-psycopg2>=2.9.21.20250121",
    "types-requests>=2.32.0.20250306",
    "types-toml>=0.10.8.20240310",
]

[tool.mypy]
exclude = ".*/templates/.*"

[tool.pyright]
exclude = ["**/templates"]

[tool.ruff]
exclude = ["**/templates/**"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Disable print statements
select = ["E4", "E7", "E9", "F", "I001", "T201"]

[tool.pytest.ini_options]
markers = ["integration_tests: run longer-running integration tests"]
# Default pytest runs shouldn't execute the integration tests
addopts = "-m 'not integration_tests'"
