[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Pierce Freeman <pierce@freeman.vc>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocstrings = { extras = ["crystal", "python"], version = "^0.24.1" }
mkdocs = "^1.5.3"

mountaineer = { path = "..", develop = true }
mkdocs-material = "^9.5.15"
pymdown-extensions = "^10.7.1"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
