[package]
name = "filzl_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssr_rs = "0.2.3"
pyo3 = { version = "0.15", features = ["extension-module"] }
log = "0.4"
env_logger = "0.9"

[profile.release]
opt-level = 3
debug = false
lto = true
incremental = false

[package.metadata.maturin]
name = "filzl_rs"
