[tool.poetry]
name = "my-website"
version = "0.1.0"
description = ""
authors = ["Pierce Freeman <piercefreeman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# While in development, link to the local path
filzl = { path = "/Users/piercefreeman/projects/filzl", develop = true }

[tool.poetry.group.dev.dependencies]
types-setuptools = "^69.0.0.20240125"
mypy = "^1.8.0"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
