[tool.poetry]
name = "create-filzl-app"
version = "0.1.0"
description = ""
authors = ["Pierce Freeman <pierce@freeman.vc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
questionary = "^2.0.1"
click = "^8.1.7"
jinja2 = "^3.1.3"
pydantic = "^2.6.1"

[tool.poetry.scripts]
new = 'create_filzl_app.cli:main'

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
