[package]
name = "rolldown-define-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rolldown = { git = "https://github.com/rolldown/rolldown.git", tag="v1.0.0-beta.1" }
tokio = { version = "1.43.0", features = ["full"] }
indexmap = "2.7.1"
rustc-hash = { version = "2.1" }
