[package]
name = "filzl_daemons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
lazy_static = "1.4.0"
pyo3 = { version = "0.20", features = ["extension-module"] }


[profile.release]
opt-level = 3
debug = false
lto = true
incremental = false

[package.metadata.maturin]
name = "filzl_daemons"
