[tool.poetry]
name = "{{project_name}}"
version = "0.1.0"
description = ""
authors = ["{{author}}"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# While in development, link to the local path
filzl = { path = "../../", develop = true }

{% if use_poetry %}
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
{% endif %}

{% if use_poetry %}
[tool.poetry.scripts]
{% else %}
[project.entry-points.console_scripts]
{% endif %}
runserver = "{{project_name}}.cli:runserver"
watch = "{{project_name}}.cli:watch"
