{% if use_poetry %}

    [tool.poetry]
    name = "{{project_name}}"
    version = "0.1.0"
    description = ""
    authors = ["{{author_name}} <{{author_email}}>"]
    readme = "README.md"

    [tool.poetry.dependencies]
    python = "^3.11"

    {% if filzl_dev_path %}
    filzl = { path = "{{filzl_dev_path}}", develop = true }
    {% else %}
    filzl = "^0.1.0"
    {% endif %}

    [build-system]
    requires = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"

    [tool.poetry.scripts]
    runserver = "{{ project_name }}.cli:runserver"
    watch = "{{ project_name }}.cli:watch"

{% else %}

    [project]
    name = "{{ project_name }}"
    version = "0.1.0"
    description = ""
    authors = [{name = "{{ author }}", email = "{{ author_email }}"}]
    readme = "README.md"

    dependencies = [
        {% if filzl_dev_path %}
        "filzl @ file://{{ filzl_dev_path }}"
        {% else %}
        "filzl"
        {% endif %}
    ]

    [project.scripts]
    runserver = "{{ project_name }}.cli:runserver"
    watch = "{{ project_name }}.cli:watch"

{% endif %}
