[project]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
authors = [{ name = "{{ author }}", email = "{{ author_email }}" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    {% if mountaineer_dev_path %}
    "mountaineer -e @ file://{{ mountaineer_dev_path }}",
    {% else %}
    "mountaineer=={{ mountaineer_min_version }}",
    {% endif %}
    "iceaxe>=0.5.0"
]

{% if package_manager == "poetry" %}
[tool.poetry.group.dev.dependencies]
pyright = ">=1.1.400"
pytest = ">=8.3.5"
pytest-asyncio = ">=0.26.0"
ruff = ">=0.11.9"
{% elif package_manager == "venv" %}
[project.optional-dependencies]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.9",
]
{% else %}
[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.9",
]
{% endif %}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
{{ project_name }} = [
    "views/**/*"
]

[project.scripts]
runserver = "{{ project_name }}.cli:runserver"
watch = "{{ project_name }}.cli:watch"
build = "{{ project_name }}.cli:build"
createdb = "{{ project_name }}.cli:createdb"

[tool.mypy]
plugins = ["pydantic.mypy"]

{% if editor_config == 'zed' %}
[tool.pyright]
venvPath = "{{venv_name}}"
venv = "{{venv_name}}"
{% endif %}
