[project]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
authors = [{ name = "{{ author }}", email = "{{ author_email }}" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    {% if mountaineer_dev_path %}
    "mountaineer -e @ file://{{ mountaineer_dev_path }}",
    {% else %}
    "mountaineer=={{ mountaineer_min_version }}",
    {% endif %}
    "iceaxe>=0.5.0"
]

{% if package_manager == "venv" %}
[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.9",
    "ty>=0.0.26",
]
{% else %}
[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.9",
    "ty>=0.0.26",
]
{% endif %}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
{{ project_name }} = [
    "views/**/*"
]

[tool.ty.src]
include = ["{{ project_name }}"]

[project.scripts]
runserver = "{{ project_name }}.cli:runserver"
watch = "{{ project_name }}.cli:watch"
build = "{{ project_name }}.cli:build"
createdb = "{{ project_name }}.cli:createdb"
