[project]
name = "ci-webapp"
version = "0.1.0"
description = ""
authors = [
    { name = "Pierce Freeman", email = "pierce@freeman.vc" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mountaineer @ file://../../../../"
]

[project.scripts]
runserver = "ci_webapp.cli:runserver"
watch = "ci_webapp.cli:watch"
build = "ci_webapp.cli:build"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]

[project.optional-dependencies]
dev = [
    "types-setuptools>=69.0.0.20240125",
    "mypy>=1.8.0",
    "ruff>=0.1.14",
    "pyright>=1.1.352"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
